--- a/dashboard/ecommerce-products-details.html
+++ b/dashboard/ecommerce-products-details.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Hyrax Admin dashboard Template</title>
+<title>Dashboard-Product List</title>
 <meta name="description" content="" />
 <meta name="keywords" content="admin, admin dashboard, admin template" />
 <meta name="author" content="SRGIT"/>
@@ -719,8 +719,8 @@
     <footer class="footer container-fluid pt-10 pb-10  pl-30 pr-30">
       <div class="row">
         <div class="col-sm-12 ">
-          <div class="pull-left text-dark pt-5 small">Copyright @ 2018  Hyrax UX  Panel. All Rights Reserved</div>
-          <div class="pull-right">Created with by <img src="plugins/assets/img/heartbeat.svg" alt="srgit" class="heart"> <a href="http://www.srgit.com/" target="_blank">SRGIT</a></div>
+          <div class="pull-left text-dark pt-5 small">Copyright @ 2018  Aced Coin. All Rights Reserved</div>
+          <div class="pull-right">Created with by <img src="plugins/assets/img/heartbeat.svg" alt="srgit" class="heart"> <a href="https://www.acedcoin.com" target="_blank">ACED</a></div>
           <div class="clearfix"></div>
         </div>
       </div>
