--- a/dashboard/email-inbox.html
+++ b/dashboard/email-inbox.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Hyrax Admin dashboard Template</title>
+<title>Dashboard-Email Inbox</title>
 <meta name="description" content="" />
 <meta name="keywords" content="admin, admin dashboard, admin template" />
 <meta name="author" content="SRGIT"/>
 <!-- Favicon -->
-<link rel="shortcut icon" href="plugins/assets/img/favicon/favicon.png">
-<link rel="icon" href="plugins/assets/img/favicon/favicon.png" type="image/x-icon">
+<link rel="shortcut icon" href="../favicon.png">
+<link rel="icon" href="../favicon.png" type="image/x-icon">
 <!-- Custom CSS -->
 <link href="plugins/assets/css/default.css" rel="stylesheet" type="text/css">
 </head>
@@ -35,7 +35,7 @@
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="mobile-only-brand pull-left">
       <div class="nav-header pull-left">
-        <div class="logo-wrap"> <a href="index.html"> <img class="brand-img" src="plugins/assets/img/logo.png" alt="brand"/> <span class="brand-text">[ Hyrax<strong>UX</strong> ]</span> </a> </div>
+        <div class="logo-wrap"> <a href="index.html"> <img class="brand-img" src="../favicon.png"  style="width: 32px;margin-bottom: -5px;"  alt="brand"/> <span class="brand-text">[ Aced<strong>Coin</strong> ]</span> </a> </div>
       </div>
       <a id="toggle-btn" class="toggle-left-nav-btn inline-block ml-20 pull-left" href="javascript:void(0);"><i class="mdi mdi-format-list-bulleted"></i></a> <a id="toggle_mobile_search" data-toggle="collapse" data-target="#search_form" class="mobile-only-view" href="javascript:void(0);"><i class="mdi mdi-search"></i></a> <a id="toggle_mobile_nav" class="mobile-only-view" href="javascript:void(0);"><i class="mdi mdi-more"></i></a>
       <form id="search_form" role="search" class="top-nav-search collapse pull-left">
@@ -845,8 +845,8 @@
     <footer class="footer container-fluid pt-10 pb-10  pl-30 pr-30">
       <div class="row">
         <div class="col-sm-12 ">
-          <div class="pull-left text-dark pt-5 small">Copyright @ 2018  Hyrax UX  Panel. All Rights Reserved</div>
-          <div class="pull-right">Created with by <img src="plugins/assets/img/heartbeat.svg" alt="srgit" class="heart"> <a href="http://www.srgit.com/" target="_blank">SRGIT</a></div>
+          <div class="pull-left text-dark pt-5 small">Copyright @ 2018  Aced Coin. All Rights Reserved</div>
+          <div class="pull-right">Created with by <img src="plugins/assets/img/heartbeat.svg" alt="srgit" class="heart"> <a href="https://www.acedcoin.com/" target="_blank">ACED</a></div>
           <div class="clearfix"></div>
         </div>
       </div>
