--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -666,8 +666,16 @@
           <!--</div>-->
         <!--</div>-->
       </div>
-      <!-- Row --> 
-      
+      <!-- Row -->
+      <div class="row" style="margin:3% 0;">
+        <div class="col-md-8 col-md-offset-2">
+          <div align="center">
+            <a href="https://ctsplatform.cc/" title="CTS - Crypto Trading Solutions" target="_blank">
+              <img src="plugins/assets/img/cts.png" style="max-width: 100%; height: auto" alt="CTS - Crypto Trading Solutions">
+            </a>
+          </div>
+        </div>
+      </div>
       <!-- Row -->
       <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
@@ -916,6 +924,20 @@
         </div>
       </div>
       <!--/table-->
+      <!--Row-->
+      <div class="row" style="margin: 3% 0;">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="padding: 1%;">
+          <a href="#" target="_blank">
+            <img src="plugins/assets/img/desktop.gif" style="width: 100%;">
+          </a>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12"  style="padding: 1%;">
+          <a href="#" target="_blank">
+            <img src="plugins/assets/img/desktop.png" style="width: 100%;">
+          </a>
+        </div>
+      </div>
+      <!--Row-->
       <div class="clearfix"></div>
       <!-- Row --> 
       <!-- Footer -->
