--- a/dashboard/stats/aced.html
+++ b/dashboard/stats/aced.html
@@ -1203,7 +1203,8 @@
                   </div>
                 </div>
               </div>
-              <div class="tab-pane panel panel-default card-view" id="acedmap">
+              <div class="tab-pane" id="acedmap">
+                <div class="panel panel-default card-view">
                   <div class="panel-wrapper collapse in">
                     <div class="panel-body pt-0">
                       <div class="table-wrap">
@@ -1211,6 +1212,7 @@
                       </div>
                     </div>
                   </div>
+                </div>
               </div>
 
             </div>
@@ -1423,10 +1425,10 @@
 <!-- Vector map JavaScript -->
 <script src="../plugins/vendors/bower_components/vectormap/jquery-jvectormap-2.0.2.min.js"></script>
 <script src="../plugins/vendors/bower_components/vectormap/jquery-jvectormap-world-mill-en.js"></script>
-<script src="../plugins/vendors/bower_components/vectormap/jquery-jvectormap-in-mill.js"></script>
-<script src="../plugins/vendors/bower_components/vectormap/jquery-jvectormap-us-aea-en.js"></script>
-<script src="../plugins/vendors/bower_components/vectormap/jquery-jvectormap-uk-mill-en.js"></script>
-<script src="../plugins/vendors/bower_components/vectormap/jquery-jvectormap-au-mill.js"></script>
+<!--<script src="../plugins/vendors/bower_components/vectormap/jquery-jvectormap-in-mill.js"></script>-->
+<!--<script src="../plugins/vendors/bower_components/vectormap/jquery-jvectormap-us-aea-en.js"></script>-->
+<!--<script src="../plugins/vendors/bower_components/vectormap/jquery-jvectormap-uk-mill-en.js"></script>-->
+<!--<script src="../plugins/vendors/bower_components/vectormap/jquery-jvectormap-au-mill.js"></script>-->
 <script src="../plugins/vendors/bower_components/vectormap/jvectormap.custom.js"></script>
 <!-- Data table JavaScript -->
 <script src="../plugins/vendors/bower_components/datatables.net/js/jquery.dataTables.min.js"></script>
